Commit story1 story2 and story3

--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
   </head>
 
   <body>
-    <p> Hello world</p>
+
+    <section id="welcome-section">
+      <h1> Welcome</h1>
+
+    </section>
+    <section id="projects">
+
+    </section>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <!--
