commit story 8 story9 story10 story11

--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
   </head>
 
   <body>
-
-    <section id="welcome-section">
-      <h1> Welcome</h1>
-
-    </section>
-    <section id="projects">
-      <p class="project-tile"></p>
-      <link rel="#link" href="/css/master.css">
-
-
-    </section>
     <nav id="navbar">
       <a href="url">section1</a>
       <a href="url">section2</a>
     </nav>
+    <section id="welcome-section">
+      <h1> Welcome</h1>
+    </section>
+
+    <section id="projects">
+      <p class="project-tile"></p>
+      <link rel="#link" href="/css/master.css">
+    </section>
+
+
+    <a href="https://publicfiles.fcc.gov/"> FFC profile</a>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <!--
